# AIE-MIREA

./: .gitignore  README.md
homeworks/HW01/: HW01.ipynb
homeworks/HW02/: HW02.ipynb
homeworks/HW03/: README.md
homeworks/HW03/eda-cli/: README.md  pyproject.toml
homeworks/HW04/eda-cli/: README.md  pyproject.toml
homeworks/HW05/: HW05.ipynb
homeworks/HW06/: HW06.ipynb  report.md
homeworks/HW06/artifacts/: best_model_meta.json  metrics_test.json  search_summaries.json
homeworks/HW08-09/: HW08-09.ipynb  report.md
homeworks/HW08-09/artifacts/: best_config.json  best_model.pt  runs.csv
homeworks/HW10-11/: HW10-11.ipynb  report.md
homeworks/HW12/: HW12.ipynb  report.md
homeworks/HW13/: HW13.ipynb  report.md
homeworks/HW14/: HW14.ipynb  report.md
project/: pyproject.toml
project/artifacts/baselines/: DummyClassifier_class_report.csv  LinearSVC Tuned_class_report.csv  LinearSVC_class_report.csv  LogisticRegression_class_report.csv  MultinomialNB_class_report.csv  baselines_metrics.json  svm_best_params.json
project/artifacts/nn-baseline/: rubert-tiny-2 (feature extract) + LogReg Tuned_class_report.csv
project/artifacts/rubert_fine-tune/: rubert_tiny2_finetuned_class_report.csv  rubert_tiny2_finetuned_metrics.json
project/notebooks/: 1) Eda & preprocessing.ipynb  2) Basic baselines.ipynb  3) Neural baseline (BERT  feature extract+ LogReg).ipynb  4) BERT fine-tune.ipynb
project/src/: preprocessing.py  service.py  train.py  utils.py
project/tests/: conftest.py  test_integration.py  test_preprocessing.py  test_service.py
(+20 files in other folders)
